# world-cup-oracle

./: .gitignore  README.md  pyproject.toml
app/: oracle_ui.py  (+1 more)
world-cup-oracle/: README.md  fotmob_parse_bot.py  fotmob_worldcup.py  match_performance.parquet  match_performance.py  parameters.py  pyproject.toml  team_performance_adjustments.parquet  test_worldcup_detail.py  worldcup_detail.py  worldcup_match_stats.parquet
world-cup-oracle/app/: oracle_ui.py  streamlit_app.py
world-cup-oracle/app/pages/: 1_Groups.py  3_Team_View.py
world-cup-oracle/data/interim/: fifa_points.parquet  matches_cycle.parquet  odds_long_term.parquet  squads.parquet  worldcup_annex_c.parquet  worldcup_groups.parquet  worldcup_lineups.parquet  worldcup_match_events.parquet  worldcup_match_stats.parquet  worldcup_schedule.parquet
world-cup-oracle/data/processed/: attack_defense_post_groups.parquet  attack_defense_pre_cup.parquet  calibration_attack_defense_bins.parquet  calibration_attack_defense_grid.parquet  calibration_b3_review.parquet  current_group_standings.parquet  group_projection.parquet  knockout_match_probabilities.parquet  match_performance.parquet  match_performance_audit.parquet  match_probabilities.parquet  match_probabilities_post_groups.parquet  next_matches.parquet  odds_adjustments.parquet  odds_long_term_coverage.parquet  ratings_elo.parquet  squad_adjustments.parquet  team_performance_adjustments.parquet  team_stage_probabilities.parquet  tsi_pre_cup.parquet  validation_calibration_bins.parquet  validation_match_predictions.parquet  validation_summary.parquet
world-cup-oracle/data/raw/: fifa_points_mock.parquet  fifa_ranking_2022-12-22.json  fifa_worldcup_2026_stages.json  worldcup_schedule_mock.parquet
world-cup-oracle/data/raw/fotmob/: worldcup_match_ids.json  worldcup_match_team_stats.csv
world-cup-oracle/data/raw/matches/: matches.csv
world-cup-oracle/data/raw/world-cup-detail/: match_events.csv  matches.csv
world-cup-oracle/docs/: 00-visao-geral.md  01-status-do-projeto.md
world-cup-oracle/docs/blocos/: B0-dados.md  B1-tsi.md  B10-arquitetura-stack.md  B2-elo-proprio.md  B3-desempenho-por-jogo.md  B4-ataque-defesa.md  B5-elenco.md  B6-odds.md  B7-simulacao.md  B9-validacao-calibracao.md
world-cup-oracle/docs/referencias/: decisoes-de-modelagem.md  fontes-de-dados.md  formulas-e-variaveis.md  glossario.md  modelagem-matematica-estatistica.md  parametros.md  pendencias-e-riscos.md  pipeline-completo.md
world-cup-oracle/docs/reports/: data-lock-2026-06-25.md
world-cup-oracle/fotmob/get_match_details/: get_match_details_match_id-4667751_dd4bda152f07.json  get_match_details_match_id-4667759_7efe7832be54.json  get_match_details_match_id-4667762_043fc5288f2a.json  get_match_details_match_id-4667765_9f01da86bb45.json  get_match_details_match_id-4667768_f68b5dc79b6e.json  get_match_details_match_id-4667769_2feea5245f24.json  get_match_details_match_id-4667780_dd5e3d57f4c1.json  get_match_details_match_id-4667785_429f83e88121.json  get_match_details_match_id-4667798_ff64850191b5.json  get_match_details_match_id-4667801_4aa7710649a9.json  get_match_details_match_id-4667815_22ec77f89961.json  get_match_details_match_id-4667821_5ccfdfd17943.json  get_match_details_match_id-4667825_afb6626ffea6.json  get_match_details_match_id-4667826_875947c2bd68.json
world-cup-oracle/fotmob/get_matches_by_date/: get_matches_by_date_date-20260613_ba6a2b9a2ed0.json  get_matches_by_date_date-20260615_0aed643bf36f.json  get_matches_by_date_date-20260623_d8ceeb7232f6.json
world-cup-oracle/matches/: README.md  team-schedules.csv
world-cup-oracle/src/tactical_oracle/: __init__.py
world-cup-oracle/src/tactical_oracle/attack_defense/: __init__.py  model.py
world-cup-oracle/src/tactical_oracle/calibration/: __init__.py  attack_defense.py
world-cup-oracle/src/tactical_oracle/config/: __init__.py  parameters.py
world-cup-oracle/src/tactical_oracle/data/: __init__.py  cache.py  io.py  mocks.py  schemas.py
world-cup-oracle/src/tactical_oracle/elo/: __init__.py  rating.py
world-cup-oracle/src/tactical_oracle/odds/: __init__.py  adjustments.py
world-cup-oracle/src/tactical_oracle/performance/: __init__.py  model.py
world-cup-oracle/src/world_cup_oracle/: utils.py
world-cup-oracle/tests/: test_annex_c.py  test_annex_c_pdf.py  test_attack_defense.py  test_cache.py  test_calibration.py  test_data_quality.py  test_data_spike.py  test_elo.py  test_fotmob_parse_bot.py  test_fotmob_worldcup.py  test_manual_odds.py  test_match_performance_pipeline.py  test_normalize.py  test_performance.py  test_pipeline_outputs.py  test_presentation_summary.py  test_real_outputs.py  test_simulation.py  test_squad.py  test_the_odds_api.py  test_tournament_projection.py  test_transfermarkt_values.py  test_tsi.py  test_update_after_matches.py  test_validation.py  test_validation_report_pipeline.py  test_worldcup_detail.py  test_worldcup_structure.py
(+284 files in other folders)
