[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "tactical-oracle"
version = "0.1.0"
description = "Local analytical model and simulator for the 2026 World Cup."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.0",
  "numpy>=1.26",
  "polars>=1.0",
  "scipy>=1.11",
]

[project.optional-dependencies]
app = ["streamlit>=1.36"]
dev = ["pytest>=8.2", "ruff>=0.5"]

[project.scripts]
tactical-oracle-mocks = "tactical_oracle.data.mocks:main"
tactical-oracle-mock-pipeline = "tactical_oracle.pipeline.mock_pipeline:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
