[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "tactical-oracle"
version = "0.1.0"
description = "Local analytical model and simulator for the 2026 World Cup."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.0",
  "numpy>=1.26",
  "polars>=1.0",
  "scipy>=1.11",
]

[project.optional-dependencies]
app = ["streamlit>=1.36"]
dev = ["pytest>=8.2", "ruff>=0.5"]

[project.scripts]
tactical-oracle-mocks = "tactical_oracle.data.mocks:main"
tactical-oracle-mock-pipeline = "tactical_oracle.pipeline.mock_pipeline:main"
tactical-oracle-build-mock-outputs = "tactical_oracle.pipeline.outputs:main"
tactical-oracle-normalize-mocks = "tactical_oracle.pipeline.normalize:main"
tactical-oracle-build-real-match-performance = "tactical_oracle.pipeline.match_performance:main"
tactical-oracle-fetch-fotmob = "tactical_oracle.pipeline.fotmob_parse_bot:main"
tactical-oracle-fetch-fotmob-worldcup = "tactical_oracle.pipeline.fotmob_worldcup:main"
tactical-oracle-validate-annex-c = "tactical_oracle.simulation.annex_c:main"
tactical-oracle-collect-odds = "tactical_oracle.pipeline.the_odds_api:main"
tactical-oracle-normalize-outrights = "tactical_oracle.pipeline.manual_odds:main"
tactical-oracle-audit-data = "tactical_oracle.pipeline.data_quality:main"
tactical-oracle-impute-squads = "tactical_oracle.pipeline.transfermarkt_values:impute_main"
tactical-oracle-extract-annex-c = "tactical_oracle.pipeline.annex_c_pdf:main"
tactical-oracle-calibrate-attack-defense = "tactical_oracle.pipeline.calibration:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
